@@ -22,11 +22,11 @@ Feature: Grid sorting
 
   @javascript
   Scenario: Sorting on association column
-    Given an author exists with first_name: "Herman"
+    Given an author exists with first_name: "Herman", last_name: "Hesse"
     And a book exists with title: "Damian", author: that author
-    And an author exists with first_name: "Carlos"
+    And an author exists with first_name: "Carlos", last_name: "Castaneda"
     And a book exists with title: "Journey", author: that author
-    And an author exists with first_name: "John"
+    And an author exists with first_name: "John", last_name: "Fowles"
     And a book exists with title: "Magus", author: that author
 
     When I go to the BookGridWithCustomColumns test page
@@ -34,6 +34,14 @@ Feature: Grid sorting
     And I sleep 1 second
     Then the grid should have records sorted by "Author  first name"
 
-    And I click on column "Author  first name"
+    When I click on column "Author  first name"
     And I sleep 1 second
     Then the grid should have records sorted by "Author  first name" desc
+
+    When I go to the BookGrid test page
+    And I click on column "Author  name"
+    And I sleep 1 second
+    Then the grid should have records sorted by "Author  name"
+    When I click on column "Author  name"
+    And I sleep 1 second
+    Then the grid should have records sorted by "Author  name" desc
