@@ -1,3 +1,8 @@
+= ?.?.?
+* bug fix
+  * :sorting_scope config option for GridPanel is now effective
+  * regression: filtering on association column is fix (covered with tests)
+
 = 0.7.2 - 2011-10-20
 * bug fix
   * Filter on a date column
